re PR c++/9749 (ICE in write_expression on invalid function prototype)

PR c++/9749
	* decl.c (grokdeclarator): Do not allow parameters with variably
	modified types.

	PR c++/9749
	* g++.dg/parse/varmod1.C: New test.

From-SVN: r63249